--- a/services.html
+++ b/services.html
@@ -69,7 +69,7 @@
 	<div class="site-hero_2">
 		<div class="section-overlay"></div>
 		<div class="page-title">
-			<h2>our services</h2>
+			<h2>our Test</h2>
 			<div class="small-title">home / services / </div>
 		</div>
 	</div>
