--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
         margin: 0px 30px 30px 30px;
     }
     }
+    .center {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 85%;
+    }
 </style>
 
 <body class="animsition">
@@ -120,8 +126,8 @@
 								<h3 class="box-headline letters rotate-2" style="padding-top: 40px">
 										<span class="box-words-wrapper">
                                         
-                                            <b class="is-visible"  style="margin-left: 45px">HAPPY &nbsp;&amp;&nbsp; TOGETHER.</b>
-                                            <b style="margin-left: 70px">&nbsp;YOU &nbsp;&amp;&nbsp; YOURS.</b>
+                                            <b class="is-visible"  style="margin-left: 29px">Forever &nbsp;&amp;&nbsp; TOGETHER.</b>
+                                            <b style="margin-left: 100px">&nbsp; YOU &nbsp;&amp;&nbsp; YOURS.</b>
 										</span>
 								</h3>
                             <p class="font-weight-bold; text-xl-left;"><p class="font-weight-bold;"><h1><span style="color: #ffffff;">y</span><span style="color: #dc143c;">OU</span><span style="color: #ffffff;">r love</span></h1></p></p>
@@ -213,246 +219,33 @@
 			<div class="col-md-8 col-md-offset-2 col-sm-12">
 				<div class="row center mb-100">
 					<div class="section-title-parralax">
-						<div class="process-numbers">01</div>
+						<div class="process-numbers">_______</div>
 						<h2>Our Team</h2>
-						<p class="module-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua.
+						<p class="module-subtitle">We are Nathanael Reese, Fazil Raja, Violet Oh, and Nicholas Stoia and our team name is The OU Love Squad. Our goal with our project, yOUr love, is to match everyone with their potential soulmate! 
 						</p>
 					</div>
 				</div>
 			</div>
-			<div class="row">
-                <!-- single member -->
-                <div class="team-member col-md-4 col-sm-4 text-center">
-                    <div class="member-thumb">
-                    	<div class="cover"><div class="cover-inner-left"></div></div>
-                        <img src="assets/img/team/member-1.jpg" alt="Team Member" class="img-responsive">
-                        <div class="team_cover"><div class="team_cover_inner"></div></div>
-                            <div class="overlay">
-                                <h6>Nice to meet! </h6>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit lacus, a iaculis diam.</p>
-                                <div class="social-links">
-                                    <a href=""><i class="fa fa-twitter"></i></a>
-                                    <a href=""><i class="fa fa-facebook"></i></a>
-                                    <a href=""><i class="fa fa-google"></i></a>
-                                </div>
-                            </div>
-                    </div>
-                        <h6>Tanislav Robert</h6>
-                        <span>Managing Director</span>
-                </div>
-                <!-- end single member -->
-
-                <!-- single member -->
-                <div class="team-member col-md-4 col-sm-4 text-center">
-                    <div class="member-thumb">
-                    	<div class="cover"><div class="cover-inner-middle"></div></div>
-                        <img src="assets/img/team/member-2.jpg" alt="Team Member" class="img-responsive">
-                        <div class="team_cover"><div class="team_cover_inner"></div></div>
-                            <div class="overlay">
-                                <h6>HELLO &amp; WELCOME! </h6>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit lacus, a iaculis diam.</p>
-                                <div class="social-links">
-                                    <a href=""><i class="fa fa-twitter"></i></a>
-                                    <a href=""><i class="fa fa-facebook"></i></a>
-                                    <a href=""><i class="fa fa-google"></i></a>
-                                </div>
-                            </div>
-                    </div>
-                        <h6>Oana Calota</h6>
-                        <span>Lead Developer</span>
-                </div>
-                <!-- end single member -->
-
-                <!-- single member -->
-                <div class="team-member col-md-4 col-sm-4 text-center ">
-                    <div class="member-thumb">
-                    	<div class="cover"><div class="cover-inner-right"></div></div>
-                        <img src="assets/img/team/member-3.jpg" alt="Team Member" class="img-responsive">
-                        <div class="team_cover"><div class="team_cover_inner"></div></div>
-                            <div class="overlay">
-                                <h6>HI FRIEND! </h6>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit lacus, a iaculis diam.</p>
-                                <div class="social-links">
-                                    <a href=""><i class="fa fa-twitter"></i></a>
-                                    <a href=""><i class="fa fa-facebook"></i></a>
-                                    <a href=""><i class="fa fa-google"></i></a>
-                                </div>
-                            </div>
-                    </div>
-                        <h6>Lucian Tanislav</h6>
-                        <span>Seo Guru</span>
-                </div>
-                <!-- end single member -->
-            </div>
+            <br>
+			
 		</div>
+        <div class="container">
+                    <!-- single member -->
+                    <div class="team-member text-center">
+                        <div class="member-thumb center">
+                            <div class="cover center"><div class="cover center"></div></div>
+                            <div class="text-center pagination-centered">
+                                <img src="assets/img/group2.jpg" alt="Team Member" class="img-responsive center">
+                                    <h6>The Love Squad </h6>
+                                </div>
+                        </div>
+                    </div>
+                    <!-- end single member -->
+               
+        </div>
 		<div class="bottom-separator hidden-xs"></div>
 	</section>
 	<!-- FEATURES -->
-	<div id="features" class="features mbr-box mbr-section mbr-section--relative">
-		<div class="container">
-						<div class="row center">
-							<div class="feature-item">
-								<div class="col-md-3 col-sm-6">
-									<div class="item-head">
-										<i class="lnr lnr-diamond"></i>
-									</div>
-									<h6>creative design</h6>
-									<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-								</div>
-							</div>
-							<!-- End features-item -->
-							<div class="feature-item">
-								<div class="col-md-3 col-sm-6">
-									<div class="item-head">
-										<i class="lnr lnr-rocket"></i>
-									</div>
-									<h6>well organized</h6>
-									<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.e</p>
-								</div>
-							</div>
-							<!-- End features-item -->
-
-							<div class="feature-item">
-								<div class="col-md-3 col-sm-6">
-									<div class="item-head">
-										<i class="lnr lnr-mustache"></i>
-									</div>
-									<h6>easy to customize</h6>
-									<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-								</div>
-							</div>
-							<!-- End features-item -->
-
-							<div class="feature-item">
-								<div class="col-md-3 col-sm-6">
-									<div class="item-head">
-										<i class="lnr lnr-phone"></i>
-									</div>
-									<h6>support 24/7</h6>
-									<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-								</div>
-							</div>
-							<!-- End features-item -->
-						</div>
-					</div>
-	</div>
-
-
-	<!-- CLIENTS -->
-	<div id="clients" class="clients mt-100 mbr-box mbr-section mbr-section--relative">
-		<svg preserveAspectRatio="none" viewBox="0 0 100 102" height="100" width="100%" version="1.1" xmlns="http://www.w3.org/2000/svg">
-			<path d="M0 0 L50 100 L100 0 Z" fill="#fff" stroke="#fff"></path>
-		</svg>
-		<div class="container">
-			<div class="row">
-						<div class="col-md-12">
-						</div>
-						<div id="owl-demo">
-								<div class="item"><img src="assets/img/clients/1.png" alt="Owl Image"></div>
-								<div class="item"><img src="assets/img/clients/2.png" alt="Owl Image"></div>
-								<div class="item"><img src="assets/img/clients/3.png" alt="Owl Image"></div>
-								<div class="item"><img src="assets/img/clients/1.png" alt="Owl Image"></div>
-								<div class="item"><img src="assets/img/clients/2.png" alt="Owl Image"></div>
-								<div class="item"><img src="assets/img/clients/3.png" alt="Owl Image"></div>
-						</div>
-				</div>
-		</div>
-	</div>
-
-	<!-- PRICING -->
-	<section id="pricing" class="pricing mbr-box mbr-section mbr-section--relative mbr-section--full-height mbr-section--bg-adapted">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 col-sm-12">
-					<div class="row center">
-						<div class="section-title mb-100">
-							<div class="process-numbers">04</div>
-							<h2>our prices</h2>
-							<p class="module-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="row center">
-				<div class="col-md-4 col-sm-6 col-xs-12">
-					<div class="pricing_plan">
-						<div class="plan_title"><h6>Basic</h6></div>
-						<div class="plan_price">
-							<i class="fa fa-usd" aria-hidden="true"></i>
-                <div class="numscroller" data-slno='1' data-min='0' data-max='29' data-delay='20' data-increment="5">29</div>
-            </div>
-						<ul class="list">
-							<li>Lorem Ipsum is simply dummy text of the printing and typesetting industry</li>
-							<li><strong>Three</strong>year support & updates</li>
-						</ul>
-						<a href="blog-inner.html" class="default-btn"> See More <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
-					</div>
-				</div>
-
-				<div class="col-md-4 col-sm-6 col-xs-12">
-					<div class="pricing_plan" style="background-color:rgba(243, 239, 135, 0.58);">
-						<div class="plan_title"><h6>Standard</h6></div>
-						<div class="plan_price">
-							<i class="fa fa-usd" aria-hidden="true"></i>
-                <div class="numscroller" data-slno='1' data-min='0' data-max='79' data-delay='15' data-increment="5">79</div>
-            </div>
-						<ul class="list">
-							<li>Lorem Ipsum is simply dummy text of the printing and typesetting industry</li>
-							<li><strong>Two</strong>year support & updates</li>
-						</ul>
-						<a href="blog-inner.html" class="default-btn"> See More <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
-					</div>
-				</div>
-
-				<div class="col-md-4 col-sm-6 col-xs-12">
-					<div class="pricing_plan">
-						<div class="plan_title"><h6>Advanced</h6></div>
-						<div class="plan_price">
-							<i class="fa fa-usd" aria-hidden="true"></i>
-                <div class="numscroller" data-slno='1' data-min='0' data-max='199' data-delay='13' data-increment="5">199</div>
-            </div>
-						<ul class="list">
-							<li>Lorem Ipsum is simply dummy text of the printing and typesetting industry</li>
-							<li><strong>Three</strong>year support & updates</li>
-						</ul>
-						<a href="blog-inner.html" class="default-btn"> See More <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<!-- Testimonials -->
-	<section id="testimonials" class="testimonials mt-100 mb-100 mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--bg-adapted mbr-parallax-background" style="background-image: url(assets/img/testimonials.jpg);">
-        <div class="container">
-        	<div class="row">
-                <div class="col-md-12">
-                    <div class="flexslider">
-                        <ul class="slides">
-                            <li>
-                                <div class="avatar"><img src="assets/img/testimonial1.jpg" alt="Sedna Testimonial Avatar"></div>
-                                <h5>"Lorem ipsum dolor sit amet, nullam lucia nisi."</h5>
-                                <p class="author">Tanislav Robert, Product Designer.</p>
-                            </li>
-                            <li>
-                                <div class="avatar"><img src="assets/img/testimonial2.jpg" alt="Sedna Testimonial Avatar"></div>
-                                <h5>"Nunc vel maximus purus. Nullam ac urna ornare."</h5>
-                                <p class="author">Tanislav Alexandru, Founder @ WocTech.</p>
-                            </li>
-                            <li>
-                                <div class="avatar"><img src="assets/img/testimonial3.jpg" alt="Sedna Testimonial Avatar"></div>
-                                <h5>"Nullam ac urna ornare, ultrices nisl ut, lacinia nisi."</h5>
-                                <p class="author">Calota Oana, Pixel Guru</p>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-	</section>
 
 	<!-- Contact -->
 	<section id="contact" class="contact mbr-box mbr-section mbr-section--relative mbr-section--bg-adapted">
@@ -557,7 +350,7 @@
 							<ul class="footer-links">
 								<li><a href="#">About</a></li>
 								<li><a href="#">Services</a></li>
-								<li><a href="#">Our Products</a></li>
+								<li><a href="services.html">Our Test</a></li>
 								<li><a href="#">Our Culture</a></li>
 								<li><a href="#">Team</a></li>
 							</ul>
