--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 	<meta name="author" content="Tanislav Robert">
-	<meta name="description" content="KARMO is a creative and modern template for digital agencies">
+	<meta name="description" content="yOUr love is your place for finding true love.">
 
 	<!-- STYLES -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
