--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,7 @@
 								<li class="box-label">About me</li>
 
 								<li><a href="index.html">Home</a> <i class="ion-ios-circle-filled color"></i></li>
-								<li><a href="services.html">services</a></li>
-								<li><a href="single-project.html">single project</a></li>
+								<li><a href="services.html">Take the Test</a></li>
 								<li><a href="contact.html">contact</a></li>
 
 								<li class="box-label">Follow us</li>
