--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 	<meta name="author" content="Tanislav Robert">
-	<meta name="description" content="yOUr love is your place for finding true love.">
+	<meta name="description" content="KARMO is a creative and modern template for digital agencies">
 
 	<!-- STYLES -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -90,7 +90,7 @@
 				<!-- box header -->
 				<div class="box-header">
 						<div class="box-logo">
-								<a href="index.html"><img src="assets/img/LOGO.png" width="80" alt="Logo"></a>
+								<a href="index.html"><img src="assets/img/logo.png" width="80" alt="Logo"></a>
 						</div>
 						<!-- box-nav -->
 						<a class="box-primary-nav-trigger" href="#0">
