added values to radio buttons

--- a/services.html
+++ b/services.html
@@ -208,8 +208,7 @@
           
         <hr />
         <h3>Overall experience with our service</h3>
-        <table>
-          <tr>
+        <table><tr>
             <th class="first-col"></th>
             <th>Very Good</th>
             <th>Good</th>
@@ -219,51 +218,51 @@
           </tr>
           <tr>
             <td class="first-col">How would you rate your overall experience with our service?</td>
-            <td><input type="radio" value="none" name="rate" /></td>
-            <td><input type="radio" value="none" name="rate" /></td>
-            <td><input type="radio" value="none" name="rate" /></td>
-            <td><input type="radio" value="none" name="rate" /></td>
-            <td><input type="radio" value="none" name="rate" /></td>
+            <td><input type="radio" value="none" name="rate"></td>
+            <td><input type="radio" value="none" name="rate"></td>
+            <td><input type="radio" value="none" name="rate"></td>
+            <td><input type="radio" value="none" name="rate"></td>
+            <td><input type="radio" value="none" name="rate"></td>
           </tr>
           <tr>
             <td class="first-col">How satisfied are you with the comprehensiveness of our offer?</td>
-            <td><input type="radio" value="none" name="satisfied" /></td>
-            <td><input type="radio" value="none" name="satisfied" /></td>
-            <td><input type="radio" value="none" name="satisfied" /></td>
-            <td><input type="radio" value="none" name="satisfied" /></td>
-            <td><input type="radio" value="none" name="satisfied" /></td>
+            <td><input type="radio" value="none" name="satisfied"></td>
+            <td><input type="radio" value="none" name="satisfied"></td>
+            <td><input type="radio" value="none" name="satisfied"></td>
+            <td><input type="radio" value="none" name="satisfied"></td>
+            <td><input type="radio" value="none" name="satisfied"></td>
           </tr>
           <tr>
             <td class="first-col">How would you rate our prices?</td>
-            <td><input type="radio" value="none" name="prices" /></td>
-            <td><input type="radio" value="none" name="prices" /></td>
-            <td><input type="radio" value="none" name="prices" /></td>
-            <td><input type="radio" value="none" name="prices" /></td>
-            <td><input type="radio" value="none" name="prices" /></td>
+            <td><input type="radio" value="1" name="prices"></td>
+            <td><input type="radio" value="2" name="prices"></td>
+            <td><input type="radio" value="3" name="prices"></td>
+            <td><input type="radio" value="4" name="prices"></td>
+            <td><input type="radio" value="5" name="prices"></td>
           </tr>
           <tr>
             <td class="first-col">How satisfied are you with the timeliness of order delivery?</td>
-            <td><input type="radio" value="none" name="timeliness" /></td>
-            <td><input type="radio" value="none" name="timeliness" /></td>
-            <td><input type="radio" value="none" name="timeliness" /></td>
-            <td><input type="radio" value="none" name="timeliness" /></td>
-            <td><input type="radio" value="none" name="timeliness" /></td>
+            <td><input type="radio" value="1" name="timeliness"></td>
+            <td><input type="radio" value="2" name="timeliness"></td>
+            <td><input type="radio" value="3" name="timeliness"></td>
+            <td><input type="radio" value="4" name="timeliness"></td>
+            <td><input type="radio" value="5" name="timeliness"></td>
           </tr>
           <tr>
             <td class="first-col">How satisfied are you with the customer support?</td>
-            <td><input type="radio" value="none" name="name" /></td>
-            <td><input type="radio" value="none" name="name" /></td>
-            <td><input type="radio" value="none" name="name" /></td>
-            <td><input type="radio" value="none" name="name" /></td>
-            <td><input type="radio" value="none" name="name" /></td>
+            <td><input type="radio" value="1" name="name"></td>
+            <td><input type="radio" value="2" name="name"></td>
+            <td><input type="radio" value="3" name="name"></td>
+            <td><input type="radio" value="4" name="name"></td>
+            <td><input type="radio" value="5" name="name"></td>
           </tr>
           <tr>
             <td class="first-col">Would you recommend our product / service to other people?</td>
-            <td><input type="radio" value="none" name="recommend" /></td>
-            <td><input type="radio" value="none" name="recommend" /></td>
-            <td><input type="radio" value="none" name="recommend" /></td>
-            <td><input type="radio" value="none" name="recommend" /></td>
-            <td><input type="radio" value="none" name="recommend" /></td>
+            <td><input type="radio" value="none" name="recommend"></td>
+            <td><input type="radio" value="none" name="recommend"></td>
+            <td><input type="radio" value="none" name="recommend"></td>
+            <td><input type="radio" value="none" name="recommend"></td>
+            <td><input type="radio" value="none" name="recommend"></td>
           </tr>
         </table>
         <div class="btn-block">
