added values to radio buttons

--- a/services.html
+++ b/services.html
@@ -218,19 +218,19 @@
           </tr>
           <tr>
             <td class="first-col">How would you rate your overall experience with our service?</td>
-            <td><input type="radio" value="none" name="rate"></td>
-            <td><input type="radio" value="none" name="rate"></td>
-            <td><input type="radio" value="none" name="rate"></td>
-            <td><input type="radio" value="none" name="rate"></td>
-            <td><input type="radio" value="none" name="rate"></td>
+            <td><input type="radio" value="1" name="rate"></td>
+            <td><input type="radio" value="2" name="rate"></td>
+            <td><input type="radio" value="3" name="rate"></td>
+            <td><input type="radio" value="4" name="rate"></td>
+            <td><input type="radio" value="5" name="rate"></td>
           </tr>
           <tr>
             <td class="first-col">How satisfied are you with the comprehensiveness of our offer?</td>
-            <td><input type="radio" value="none" name="satisfied"></td>
-            <td><input type="radio" value="none" name="satisfied"></td>
-            <td><input type="radio" value="none" name="satisfied"></td>
-            <td><input type="radio" value="none" name="satisfied"></td>
-            <td><input type="radio" value="none" name="satisfied"></td>
+            <td><input type="radio" value="1" name="satisfied"></td>
+            <td><input type="radio" value="2" name="satisfied"></td>
+            <td><input type="radio" value="3" name="satisfied"></td>
+            <td><input type="radio" value="4" name="satisfied"></td>
+            <td><input type="radio" value="5" name="satisfied"></td>
           </tr>
           <tr>
             <td class="first-col">How would you rate our prices?</td>
@@ -258,11 +258,11 @@
           </tr>
           <tr>
             <td class="first-col">Would you recommend our product / service to other people?</td>
-            <td><input type="radio" value="none" name="recommend"></td>
-            <td><input type="radio" value="none" name="recommend"></td>
-            <td><input type="radio" value="none" name="recommend"></td>
-            <td><input type="radio" value="none" name="recommend"></td>
-            <td><input type="radio" value="none" name="recommend"></td>
+            <td><input type="radio" value="1" name="recommend"></td>
+            <td><input type="radio" value="2" name="recommend"></td>
+            <td><input type="radio" value="3" name="recommend"></td>
+            <td><input type="radio" value="4" name="recommend"></td>
+            <td><input type="radio" value="5" name="recommend"></td>
           </tr>
         </table>
         <div class="btn-block">
