Added href on services

--- a/services.html
+++ b/services.html
@@ -399,7 +399,7 @@
           </tr>
         </table>
         <div class="btn-block">
-          <button type="submit" onclick="checkButton">Send Feedback</button>
+          <button type="submit" onclick="checkButton" href="thankyou.html">Send Feedback</button>
         </div>
         <script>
         function checkButton() {
