--- a/services.html
+++ b/services.html
@@ -439,6 +439,10 @@
 
                 if(one != null && two != null) {
                     inp = name + "," + phone + "," + ig + "," + one + "," + two;
+
+                    xml.open("GET", "postdata.php?q="+inp, true);
+                    xml.send();
+
                     console.log(inp);
                 }
                 else {
