--- a/services.html
+++ b/services.html
@@ -9,6 +9,9 @@
 	<meta name="author" content="Tanislav Robert">
 	<meta name="description" content="KARMO is a creative and modern template for digital agencies">
 
+	<?php include 'postdata.php';?>
+
+
 	<!-- STYLES -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/flexslider.css">
@@ -210,7 +213,7 @@
 		</div>
 	</div>
     <div class="testbox">
-      <form action="/">
+      <form action="postdata.php">
         <h1>yOUr Love Test</h1>
         <p>Please take a few minutes to give us feedback about our service by filling in this short Customer Feedback Form. We are conducting this research in order to measure your level of satisfaction with the quality of our service. We thank you for your participation.</p>
           
@@ -423,7 +426,7 @@
 
             }
             ?>
-			<?php include 'postdata.php';?>
+
         <script>
         function checkButton() {
                 var inp = '';
