--- a/services.html
+++ b/services.html
@@ -456,7 +456,7 @@
         }
             
         </script>
-	<button type="submit" onclick="checkButton()" href="thankyou.html">Send Feedback</button>
+	<button onclick="checkButton()" href="thankyou.html">Send Feedback</button>
     </div>
         
         </form>
