change get to post

--- a/services.html
+++ b/services.html
@@ -444,7 +444,7 @@
                 if(one != null && two != null) {
                     inp = name + "," + phone + "," + ig + "," + one + "," + two;
 
-                    xml.open("GET", "postdata.php?q="+inp, true);
+                    xml.open("POST", "postdata.php?q="+inp, true);
                     xml.send();
 
                     console.log(inp);
