--- a/services.html
+++ b/services.html
@@ -58,6 +58,11 @@
       font-size: 18px;
       font-weight: 500;
       }
+      .responsive{
+      width: 100%;
+      max-width: 1000px;
+      height: auto;
+      }
       div.testbox {
       display: flex;
       justify-content: center;
@@ -463,7 +468,7 @@
 			<div class="row center">
 				<div class="col-md-8 col-md-offset-2 col-sm-12">
 					<div class="section-title">
-						<h2 class="mb-50">Our services</h2>
+						<h2 class="mb-50">THANK YOU!</h2>
 						<p class="module-subtitle">Latest project we have made. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua.</p>
 					</div>
@@ -510,7 +515,7 @@
 				</div>-->
 
 				<div class="col-md-6 wow fadeInUp" data-wow-delay=".1s">
-					<img src="assets/img/services_desc.jpg" alt="img" style="width:100%">
+					<img   src="assets/img/services_desc.jpg" alt="img" style="width:100%" class="responsive">
 				</div>
 			</div><!-- end row -->
 		</div><!-- end container -->
