--- a/thankyou.html
+++ b/thankyou.html
@@ -77,7 +77,7 @@
                                         <b style="margin-left: 100px">&nbsp; YOU &nbsp;&amp;&nbsp; YOURS.</b>
                                     </span>
                             </h3>
-                        <p class="font-weight-bold; text-xl-left;"><p class="font-weight-bold;"><h1><span style="color: #ffffff;">y</span><span style="color: #dc143c;">OU</span><span style="color: #ffffff;">r love</span></h1></p></p>
+                        <p class="font-weight-bold; text-xl-left;"><p class="font-weight-bold;"><h1><span style="color: #ffffff;">y</span><span style="color: #dc143c;">OU</span><span style="color: #ffffff;">r love</span></h1>
                     </div>
 
                     <div class="mouse">
