--- a/services.html
+++ b/services.html
@@ -227,7 +227,7 @@
 		</div>
 	</div>
     <div class="testbox">
-      <form method="post" action="/postdata.php">
+      <form method="post" action="test.php">
         <h1>yOUr Love Test</h1>
         <p>Please take a few minutes to give us feedback about our service by filling in this short Customer Feedback Form. We are conducting this research in order to measure your level of satisfaction with the quality of our service. We thank you for your participation.</p>
           
