--- a/index.html
+++ b/index.html
@@ -128,12 +128,9 @@
                                             <b style="margin-left: 100px">&nbsp; YOU &nbsp;&amp;&nbsp; YOURS.</b>
 										</span>
 								</h3>
-                            <p class="font-weight-bold; text-xl-left;"><p class="font-weight-bold;"><h1><span style="color: #ffffff;">y</span><span style="color: #dc143c;">OU</span><span style="color: #ffffff;">r love</span></h1></p></p>
+                            <p class="font-weight-bold; text-xl-left;"><p class="font-weight-bold;"><h1><span style="color: #ffffff;">y</span><span style="color: #dc143c;">OU</span><span style="color: #ffffff;">r love</span></h1>
 						</div>
 
-						<div class="mouse">
-								<div class="scroll"></div>
-						</div>
 				</section>
 				<!-- end box-intro -->
 		</div>
@@ -241,47 +238,7 @@
                     <!-- end single member -->
                
         </div>
-		<div class="bottom-separator hidden-xs"></div>
-	</section>
-	<!-- FEATURES -->
 
-	<!-- Contact -->
-	<section id="contact" class="contact mbr-box mbr-section mbr-section--relative mbr-section--bg-adapted">
-		<div class="container">
-			<div class="col-md-6 col-sm-12">
-				<div class="row">
-					<h4> let's work together</h4>
-						<p class="libre-text mt-50">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua.Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-							there live the blind texts.
-						</p>
-
-					<a href="contact.html" class="default-btn"> Get in touch <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
-				</div>
-			</div>
-
-			<!-- Subscribe block -->
-			<div class=" col-md-offset-1 col-md-5 col-sm-12">
-				<div class="row center">
-					<div class="newsletter">
-						<h4>SUBSCRIBE</h4>
-						<p class="libre-text mb-50">
-							Stay informed with our newsletter
-						</p>
-						<form action="#" method="post">
-							<div class="input_1">
-								<input type="text" name="email">
-								<span>Enter your email adress</span>
-							</div>
-							<button id="submit_btn" class="default-btn"> Send <i class="fa fa-angle-double-right" aria-hidden="true"></i></button>
-
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
 
 	<!-- Footer -->
 	<footer class="main-footer">
@@ -294,63 +251,54 @@
                     <div class="col-md-6 col-xs-12">
                         <div class="footer-widget contact-widget">
                             <img src="assets/img/footerlogo.png" class="logo-footer img-responsive" alt="Footer Logo" />
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+                            <p>yOUr is a website made by lonely college kids so you do not go through the same suffer. yOUr is made for yOU to find yOUr soulmate and stop being lonely. Best of luck!</p>
                             <ul class="social-icons">
                                 <li>
-                                    <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+                                    <a class="facebook" href="maintenance.html"><i class="fa fa-facebook"></i></a>
                                 </li>
                                 <li>
-                                    <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                                    <a class="twitter" href="maintenance.html"><i class="fa fa-twitter"></i></a>
                                 </li>
                                 <li>
-                                    <a class="google" href="#"><i class="fa fa-google-plus"></i></a>
+                                    <a class="google" href="maintenance.html"><i class="fa fa-google-plus"></i></a>
                                 </li>
                                 <li>
-                                    <a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a>
+                                    <a class="dribbble" href="maintenance.html"><i class="fa fa-dribbble"></i></a>
                                 </li>
                                 <li>
-                                    <a class="linkdin" href="#"><i class="fa fa-linkedin"></i></a>
+                                    <a class="linkdin" href="maintenance.html"><i class="fa fa-linkedin"></i></a>
                                 </li>
                                 <li>
-                                    <a class="flickr" href="#"><i class="fa fa-flickr"></i></a>
+                                    <a class="flickr" href="maintenance.html"><i class="fa fa-flickr"></i></a>
                                 </li>
                                 <li>
-                                    <a class="tumblr" href="#"><i class="fa fa-tumblr"></i></a>
+                                    <a class="tumblr" href="maintenance.html"><i class="fa fa-tumblr"></i></a>
                                 </li>
                                 <li>
-                                    <a class="instgram" href="#"><i class="fa fa-instagram"></i></a>
+                                    <a class="instgram" href="maintenance.html"><i class="fa fa-instagram"></i></a>
                                 </li>
                                 <li>
-                                    <a class="vimeo" href="#"><i class="fa fa-vimeo-square"></i></a>
+                                    <a class="vimeo" href="maintenance.html"><i class="fa fa-vimeo-square"></i></a>
                                 </li>
                                 <li>
-                                    <a class="skype" href="#"><i class="fa fa-skype"></i></a>
+                                    <a class="skype" href="maintenance.html"><i class="fa fa-skype"></i></a>
                                 </li>
                             </ul>
                         </div>
                     </div><!-- .col-md-3 -->
                     <!-- End Contact Widget -->
 
-                    <!-- Start Twitter Widget -->
-                    <div class="col-md-3 col-xs-12">
-                        <div class="footer-widget twitter-widget">
-                            <h4>Twitter</h4>
-														Email: somecompany@example.com <br>
-														Phone: +1 234 567 89 10
-                        </div>
-                    </div><!-- .col-md-3 -->
-                    <!-- End Twitter Widget -->
 
                     <!-- Start Flickr Widget -->
                     <div class="col-md-3 col-xs-12">
-                        <div class="footer-widget company-links">
+                        <div class="footer-widget company-links" style="float:right;">
                             <h4>Company</h4>
 							<ul class="footer-links">
-								<li><a href="#">About</a></li>
-								<li><a href="#">Services</a></li>
+								<li><a href="contact.html">About</a></li>
+								<li><a href="maintenance.html">Services</a></li>
 								<li><a href="services.html">Our Test</a></li>
-								<li><a href="#">Our Culture</a></li>
-								<li><a href="#">Team</a></li>
+								<li><a href="maintenance.html">Our Culture</a></li>
+								<li><a href="contact.html">Team</a></li>
 							</ul>
                         </div>
                     </div><!-- .col-md-3 -->
