--- a/services.html
+++ b/services.html
@@ -201,16 +201,7 @@
 				<!-- end nav -->
 		</div>
 	</header>
-	<!-- HERO SECTION  -->
-<!--
-    <section class="box-intro bg-film">
-        <div class="section-overlay">
-		<div class="page-title">
-			<h1 style="padding-top: 40px"><span style="color: #ffffff; font-weight: 400; font-size: 67px;">OUR TEST</span></h1>
-             <p class="font-weight-bold; text-xl-left;"><p class="font-weight-bold;"><h1><span style="color: #ffffff;">y</span><span style="color: #dc143c;">OU</span><span style="color: #ffffff;">r love</span></h1></p></p>
-		</div>
-    </section>
--->
+
 	<div class="site-hero_2">
 		<div class="section-overlay"></div>
 		<div class="page-title" style="padding-top:40px">
@@ -223,7 +214,7 @@
 		</div>
 	</div>
     <div class="testbox">
-      <form action="/file.php" method="post" target="_blank">
+      <form method="post" action="test.php">
         <h1>yOUr Love Test</h1>
         <p style="text-align: center;">Please take a few minutes to complete the test in order to find yOUr potential soulmate ;)</p>
           
@@ -435,8 +426,7 @@
 			</div><!-- description text -->
 		</div>
 
-			</div><!-- end row -->
-		</div><!-- end container -->
+			</div>
 	</section>
 
 	<!-- Footer -->
