--- a/services.html
+++ b/services.html
@@ -386,11 +386,11 @@
           </tr>
             <tr>
             <td class="first-col">A hotdog is a sandwich</td>
-            <td><input type="radio" value=1 name="pets" /></td>
-            <td><input type="radio" value=2 name="pets" /></td>
-            <td><input type="radio" value=3 name="pets" /></td>
-            <td><input type="radio" value=4 name="pets" /></td>
-            <td><input type="radio" value=5 name="pets" /></td>
+            <td><input type="radio" value=1 name="sand" /></td>
+            <td><input type="radio" value=2 name="sand" /></td>
+            <td><input type="radio" value=3 name="sand" /></td>
+            <td><input type="radio" value=4 name="sand" /></td>
+            <td><input type="radio" value=5 name="sand" /></td>
           </tr>
             <tr>
             <td class="first-col">Greatest fear is being alone</td>
